2007-02-25  Armin Burgmeier  <armin@0x539.de>

	* inc/server.hpp: Added overload instead of default argument for ipv6
	parameter in reopen(). Older gcc versions seem no to support member
	variables as default arguments. I don't even know whether that's
	allowed by the C++ standard or not.

2007-02-25  Philipp Kern <phil@0x539.de>

	* NEWS, configure.in: Version bump to 1.3.3
	* README: Added GNUTLS to the dependency list

2007-02-25  Philipp Kern <phil@0x539.de>

	Reformatted ChangeLog to ease new entries which are not
	autogenerated anymore.

2007-02-24  Philipp Kern <phil@0x539.de>

	Remove a darcs relict.

2006-12-31  Armin Burgmeier <armin@0x539.de>

	Preserve API compatibility for the IPv6 fix

2006-11-08  Armin Burgmeier <armin@0x539.de>

	Made ipv6 a parameter to reopen

2006-11-04  Armin Burgmeier <armin@0x539.de>

	Reorder netinet/in.h inclusion in address.hpp

2006-11-04  Armin Burgmeier <armin@0x539.de>

	libtool stuff

2006-11-04  Armin Burgmeier <armin@0x539.de>

	Do not propagate any errors to the selector [fixes #215]

2006-09-24  Philipp Kern <phil@0x539.de>

	Updated ChangeLog for release

2006-09-24  Philipp Kern <phil@0x539.de>

	Updated build system supplementaries

2006-09-15  Philipp Kern <phil@0x539.de>

	Use CXXFLAGS instead of CFLAGS in gnutls detection

2006-09-05  Philipp Kern <phil@0x539.de>

	MingW compilation fix

2006-08-25  Philipp Kern <phil@0x539.de>

	Updated ChangeLog for release

2006-08-25  Philipp Kern <phil@0x539.de>

	Bump version to 1.3.1

2006-08-21  Philipp Kern <phil@0x539.de>

	Drop Fortran checks for a massive speed-up

2006-08-17  Philipp Kern <phil@0x539.de>

	Updated ChangeLog for release

2006-08-17  Philipp Kern <phil@0x539.de>

	Fixed the po/ Makefile

2006-08-17  Philipp Kern <phil@0x539.de>

	Translation roundup

2006-08-16  Philipp Kern <phil@0x539.de>

	Bumped version to 1.3.0rc3

2006-08-16  Philipp Kern <phil@0x539.de>

	Updated NEWS

2006-08-15  Armin Burgmeier <armin@0x539.de>
