@@ -1,4 +1,8 @@
-2007-02-25  Armin Burgmeier  <armin@0x539.de>
+2007-04-02  Philipp Kern <phil@0x539.de>
+
+	* inc/client.hpp: reset connection pointer if an error occurs
+
+2007-02-25  Armin Burgmeier <armin@0x539.de>
 
 	* inc/server.hpp: Added overload instead of default argument for ipv6
 	parameter in reopen(). Older gcc versions seem no to support member
